--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -74,9 +74,9 @@
         <% @event.signups.where(status: true).each do |s| %>
           <li class="flex">
             <%= gravatar_for s.user, class: "h-8 w-8 rounded-full self-center" %>
-            <div class="ml-3">
+            <div class="ml-3 self-center">
               <p class="text-sm font-medium text-gray-900 self-center"><%= s.user.name %></p>
-              <% if s.reason %>
+              <% if s.reason.present? %>
                 <p class="text-sm text-gray-500"><%= s.reason %></p>
               <% end %>
             </div>
@@ -94,9 +94,9 @@
         <% @event.signups.where(status: false).each do |s| %>
           <li class="flex">
             <%= gravatar_for s.user, class: "h-8 w-8 rounded-full self-center" %>
-            <div class="ml-3">
+            <div class="ml-3 self-center">
               <p class="text-sm font-medium text-gray-900"><%= s.user.name %></p>
-              <% if s.reason %>
+              <% if s.reason.present? %>
                 <p class="text-sm text-gray-500"><%= s.reason %></p>
               <% end %>
             </div>
@@ -118,7 +118,7 @@
           <% @event.external_signups.each do |s| %>
             <li class="flex">
               <%= gravatar_for_email s.email, class: "h-8 w-8 rounded-full self-center" %>
-              <div class="ml-3">
+              <div class="ml-3 self-center">
                 <p class="text-sm font-medium text-gray-900"><%= "#{s.first_name} #{s.last_name}" %></p>
                 <% if s.note %>
                   <p class="text-sm text-gray-500"><%= s.note %></p>
@@ -145,7 +145,7 @@
           <% @unknown.each do |s| %>
             <li class="flex">
               <%= gravatar_for s, class: "h-8 w-8 rounded-full mr-3" %>
-              <p class="text-sm font-medium text-gray-900"><%= s.name %></p>
+              <p class="text-sm font-medium text-gray-900 self-center"><%= s.name %></p>
             </li>
           <% end %>
         </ul>
