--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
                     </div>
                   <% end %>
                 </div>
-                <div class="flex-row-reverse max-w-md place-self-center">
+                <div class="flex-row-reverse place-self-center">
                   <%= yield :options %>
                 </div>
               </div>
