--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -99,7 +99,7 @@
                 <%= f.check_box :public, { checked: @event.invitation_code?, class: "focus:ring-hamers-red-500 h-4 w-4 text-hamers-red-600 border-gray-300 rounded" } %>
               </div>
               <div class="ml-3 text-sm">
-                <label class="font-medium text-gray-700">Plebs</label>
+                <label class="font-medium text-gray-700">Publiek</label>
                 <p class="text-gray-500">Staan we plebs toe op deze activiteit?</p>
               </div>
             </div>
