--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -12,23 +12,19 @@
                   </div>
                   <div class="flex flex-shrink-0 text-sm">
                     <% if event.public? %>
-                      <p class="md:ml-2">
-                      <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">
-                        Plebs
-                      </span>
+                      <p class="md:ml-2 inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">
+                        Publiek
                       </p>
                     <% end %>
                     <% if event.usergroup %>
-                      <p class="md:ml-2">
-                      <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">
+                      <p class="md:ml-2 inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">
                         <%= event.usergroup.name %>
-                      </span>
                       </p>
                     <% end %>
                   </div>
                 </div>
                 <div class="mt-2 flex items-center text-sm text-gray-500">
-                  <div class="flex ">
+                  <div class="flex">
                     <%= heroicon('calendar', class_name: "flex-shrink-0 mr-1 h-4 w-4 text-gray-400 self-center") %>
                     <span>
                       <% if event.today? %>
