--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -12,12 +12,12 @@
                   </div>
                   <div class="flex flex-shrink-0 text-sm">
                     <% if event.public? %>
-                      <p class="md:ml-2 inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">
+                      <p class="md:ml-2 inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">
                         Publiek
                       </p>
                     <% end %>
                     <% if event.usergroup %>
-                      <p class="md:ml-2 inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">
+                      <p class="md:ml-2 inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800">
                         <%= event.usergroup.name %>
                       </p>
                     <% end %>
