--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -27,8 +27,13 @@
     <div class="relative h-auto divide-y divide-gray-200">
 
       <div class="pb-4">
-        <% if @event.usergroup %>
+        <% if @event.public? %>
           <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">
+            Publiek
+          </span>
+        <% end %>
+        <% if @event.usergroup %>
+          <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800">
             <%= @event.usergroup.name %>
           </span>
         <% end %>
