--- a/app/views/users/settings/usergroups.html.erb
+++ b/app/views/users/settings/usergroups.html.erb
@@ -7,7 +7,7 @@
     <%= render partial: 'users/settings/menu' %>
   </aside>
 
-  <div class='md:col-span-9 md:pl-6'>
+  <div class='md:col-span-9 md:pl-6 space-y-4 py-2 md:py-4'>
     <%= render 'users/settings/form_usergroups' %>
   </div>
 </div>
