--- a/app/views/users/settings/_form_profile.html.erb
+++ b/app/views/users/settings/_form_profile.html.erb
@@ -21,7 +21,7 @@
   <legend class="sr-only">Notifications</legend>
   <div class="relative flex items-start">
     <div class="flex items-center h-5">
-      <%= f.check_box :anonymous, class: "focus:ring-hamers-red-500 h-4 w-4 text-hamers-red-600 border-gray-300 rounded" %>
+      <%= f.check_box :anonymous, class: checkbox_classes %>
     </div>
     <div class="ml-3 text-sm">
       <%= f.label :anonymous, "Anoniem op publieke pagina's", class: "font-medium text-gray-700" %>
