Fix maarten 500 proper

--- a/public/404.html.erb
+++ b/public/404.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>The page you were looking for doesn't exist (404)</title>
   <style>
   body {
     background-color: #EFEFEF;
@@ -48,10 +48,19 @@
 </head>
 
 <body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-  </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <!-- This file lives in public/404.html.erb -->
+  <% if current_user %>
+    <div class="dialog">
+      <h1>Wie dit leest trekt een bak!</h1>
+      <p>Ha! Helaas. Je hebt deze pagina gevonden dus mag een bak trekken en video plaatsen in de feutenchat!</p>
+    </div>
+    <p>Ja, het dispuut is hiervan op de hoogte gesteld.</p>
+  <% else %>
+    <div class="dialog">
+      <h1>The page you were looking for doesn't exist.</h1>
+      <p>You may have mistyped the address or the page may have moved.</p>
+    </div>
+    <p>If you are the application owner check the logs for more information.</p>
+  <% end  %>
 </body>
 </html>
