--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -58,7 +58,7 @@
 
       <dl class="border-t border-gray-200 sm:divide-y sm:divide-gray-200">
         <% specs = {
-          "Aantal keer gequote": @user.quotes.count,
+          "Aantal keer geciteerd": @user.quotes.count,
           "Aantal bieren gereviewd": @user.reviews.count,
           "Aantal stickers geplakt": @user.stickers.count,
           "Gemiddeld reviewcijfer": @user.average_review_grade,
