Make user gravatar images clickable

--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -1,6 +1,6 @@
 <li class="py-4">
   <div class="flex space-x-3 text-sm">
-    <%= gravatar_for quote.user, class: "h-8 w-8 rounded-full self-center" %>
+    <%= gravatar_for quote.user, class: "h-8 w-8 rounded-full" %>
     <div class="flex-col flex-1">
       <div class="flex flex-col sm:flex-row justify-between self-center">
         <h3 class="flex-grow font-medium"><%= quote.text %></h3>
