--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -1,6 +1,8 @@
 <li class="py-4">
   <div class="flex space-x-3 text-sm">
-    <%= gravatar_for quote.user, class: "h-8 w-8 rounded-full" %>
+    <%= link_to quote.user, class: "self-center" do %>
+      <% gravatar_for quote.user, class: "h-8 w-8 rounded-full" %>
+    <% end %>
     <div class="flex-col flex-1">
       <div class="flex flex-col sm:flex-row justify-between self-center">
         <h3 class="flex-grow font-medium"><%= quote.text %></h3>
