--- a/app/views/shared/_blog.html.erb
+++ b/app/views/shared/_blog.html.erb
@@ -6,7 +6,9 @@
     <% @blogitems.each do |b| %>
       <li class="py-2 px-4">
         <div class="flex space-x-3">
-          <%= gravatar_for b.user, class: "h-6 w-6 rounded-full self-center" %>
+          <%= link_to b.user, class: "self-center" do %>
+            <% gravatar_for b.user, class: "h-6 w-6 rounded-full" %>
+          <% end %>
           <div class="flex-1 space-y-1">
             <div class="flex items-center justify-between">
               <span class="text-sm font-medium"><%= link_to b.title, b %></span>
