Use slightly more space for non-description stuff in event form

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -12,8 +12,7 @@
 
   <div class="flex-grow w-full max-w-7md mx-auto lg:flex">
     <div class="flex-1 min-w-0 bg-white md:flex">
-      <div
-        class="border-b border-gray-200 pb-4 md:border-b-0 md:flex-shrink-0 md:w-64 md:-my-6 md:border-r md:border-gray-200 bg-white">
+      <div class="border-b border-gray-200 pb-4 md:border-b-0 md:flex-shrink-0 md:w-1/4 md:-my-6 md:border-r md:border-gray-200 bg-white">
         <div class="h-full pl-4 pr-6 md:py-6 md:pl-0">
           <div class="h-full relative" style="min-height: 12rem;">
             <div class="mt-6 grid grid-cols-3 gap-y-6 gap-x-4">
