--- a/app/views/users/_table.html.erb
+++ b/app/views/users/_table.html.erb
@@ -16,7 +16,7 @@
                 Lichting
               </th>
               <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Quotes
+                Citaten
               </th>
               <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                 Reviews
