--- a/app/views/shared/_random_biertje.html.erb
+++ b/app/views/shared/_random_biertje.html.erb
@@ -17,7 +17,7 @@
         </div>
       <% else %>
         <div class="w-full">
-          <h3 class="text-sm font-medium text-gray-900">Er zijn nog geen Quotes :(</h3>
+          <h3 class="text-sm font-medium text-gray-900">Er zijn nog geen citaten :(</h3>
         </div>
       <% end %>
     </div>
