--- a/app/views/users/settings/_menu.html.erb
+++ b/app/views/users/settings/_menu.html.erb
@@ -4,6 +4,7 @@
     Profiel: { path: edit_user_path(current_user), icon: 'user' },
     Foto: { path: "https://gravatar.com/emails", icon: 'user-circle' },
     Wachtwoord: { path: edit_password_user_path(current_user), icon: 'lock-closed' },
+    '2FA': { path: edit_two_factor_user_path(current_user), icon: 'sparkles' },
     'API-sleutels': { path: user_api_keys_path(current_user), icon: 'key' },
     'Groepen': { path: edit_usergroups_user_path(current_user), icon: 'user-group' }
   } %>
