--- a/app/views/shared/_random_biertje.html.erb
+++ b/app/views/shared/_random_biertje.html.erb
@@ -4,7 +4,9 @@
       <h2 class="text-hamers-red-400 text-xl font-bold mb-4">Citaat van de pagelaad</h2>
       <div class="w-full flex justify-center">
         <div class="w-full flex space-x-3 text-sm">
-          <%= gravatar_for @random_quote.user, class: "h-8 w-8 rounded-full self-center" %>
+          <%= link_to @random_quote.user, class: "self-center" do %>
+            <% gravatar_for @random_quote.user, class: "h-8 w-8 rounded-full" %>
+          <% end %>
           <div class="flex-col flex-1 space-y-1">
             <div class="flex flex-col sm:flex-row space-y-1 justify-between self-center">
               <h3 class="flex-grow font-medium"><%= @random_quote.text %></h3>
@@ -59,7 +61,7 @@
                           class: "inline-flex items-center px-4 py-2 text-sm font-bold rounded-md text-white bg-hamers-red-500 hover:bg-hamers-red-600" do %>
               <!-- Heroicon name: solid/plus -->
               <svg class="-ml-1 mr-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
+                   aria-hidden="true">
                 <path fill-rule="evenodd"
                       d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
                       clip-rule="evenodd"/>
