--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
 <div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
   <aside class="md:col-span-3 md:pr-6">
     <div class="flex justify-center">
-      <%= gravatar_for @user, size: 500, class: "h-32 w-32 rounded-full m-8" %>
+      <%= gravatar_for @user, size: 500, class: "h-48 w-48 rounded-full m-8" %>
     </div>
 
     <div class="-mx-6 text-gray-900">
@@ -80,16 +80,17 @@
         <% end %>
       </dl>
 
-      <% if @user.alid? && current_user.in_group?("Trajectcoördinatoren") %>
+      <% if @user.alid? && current_user.traject? %>
         <div class="p-2 sm:p-4 border-t border-gray-200">
-          <h4>Rereviewde bieren</h4>
+          <h4>
+            Rereviewde bieren
+            <span class="text-gray-500"><%= @user.reviews.count %></span>
+          </h4>
           <ul class="list-disc list-inside">
             <% @user.reviews.each do |r| %>
-              <li>
-                <%= link_to r.beer do %>
-                  <%= r.beer.name %> <span class="text-gray-500">(<%= r.beer.kind %>)</span>
-                <% end %>
-              </li>
+              <%= link_to r.beer do %>
+                <li><%= r.beer.name %> <span class="text-gray-500">(<%= r.beer.kind %>)</span></li>
+              <% end %>
             <% end %>
           </ul>
         </div>
