Laat zien welke clowns geen 2FA hebben

--- a/app/views/users/_table.html.erb
+++ b/app/views/users/_table.html.erb
@@ -21,6 +21,9 @@
               <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                 Reviews
               </th>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                2FA
+              </th>
               <th scope="col" class="relative px-6 py-3">
                 <span class="sr-only">Link</span>
               </th>
@@ -54,6 +57,9 @@
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
                   <%= user.reviews.count %>
+                </td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                  <%= user.otp_required_for_login? ? "✅" : "🤡" %>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                   <%= link_to user, class: "float-right" do %>
