--- a/app/views/static_pages/trail.html.erb
+++ b/app/views/static_pages/trail.html.erb
@@ -38,6 +38,8 @@
               <%= c.to_s %>
             </dt>
             <dd class="mt-1 text-gray-900 sm:mt-0 sm:col-span-2">
+              <% v[0] = Quote.decrypt_text_ciphertext(v[0]) if c == 'text_ciphertext' %>
+              <% v[1] = Quote.decrypt_text_ciphertext(v[1]) if c == 'text_ciphertext' %>
               <%== Diffy::Diff.new(v[0], v[1]).to_s(:html_simple) %>
             </dd>
           </div>
