Add link to mystickers on stickers#index

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -84,7 +84,7 @@
                 <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to current_user do %><i class="fa fa-user-circle fa-fw"></i> Profiel<% end %></li>
-                <li><%= link_to personal_sticker_path do %><i class="far fa-sticky-note fa-fw"></i> Mijn stickers<% end %></li>
+                <li><%= link_to personal_stickers_path do %><i class="far fa-sticky-note fa-fw"></i> Mijn stickers<% end %></li>
                 <li><%= link_to oauth_authorized_applications_path do %><i class="fa fa-unlock fa-fw"></i> Mijn authorisaties<% end %></li>
                 <li><%= link_to edit_user_path(current_user) do %><i class="fa fa-wrench fa-fw"></i> Instellingen<% end %></li>
                 <li class="divider"></li>
