--- a/app/views/stickers/_form.html.erb
+++ b/app/views/stickers/_form.html.erb
@@ -1,13 +1,13 @@
-<%= form_for @sticker do |f| %>
+<%= form_for @sticker, html: { class: 'space-y-3 space-y' } do |f| %>
   <%= f.label :latitude, class: label_classes %>
   <%= f.text_field :lat, id: 'lat', pattern: '-?\d*\.\d*', required: true, class: input_classes %>
   <%= @sticker.errors.full_messages_for(:lat).first[3..] if @sticker.errors[:lat].any? %>
 
-  <%= f.label :longitude %>
+  <%= f.label :longitude, class: label_classes %>
   <%= f.text_field :lon, id: 'lon', pattern: '-?\d*\.\d*', required: true, class: input_classes %>
   <%= @sticker.errors.full_messages_for(:lon).first[3..] if @sticker.errors[:lon].any? %>
 
-  <%= f.label :notes %>
+  <%= f.label :notes, class: label_classes %>
   <%= f.text_area :notes, class: input_classes %>
 
   <%= f.submit :Verstuur, class: submit_classes %>
