--- a/app/views/static_pages/trail.html.erb
+++ b/app/views/static_pages/trail.html.erb
@@ -10,16 +10,18 @@
 
         <div class="flex-1 space-y-1">
           <div class="flex items-center justify-between">
-            <h3 class="text-sm font-medium"><%= t.present.name %></h3>
-            <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
-          </div>
-          <div class="flex justify-between">
-            <span class="text-sm text-gray-500 font-medium">
+            <h3 class="text-sm font-medium">
               <% if t.present.link %>
                 <%= link_to t.present.message, t.present.link %>
               <% else %>
                 <%= t.present.message %>
               <% end %>
+            </h3>
+            <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
+          </div>
+          <div class="flex justify-between">
+            <span class="text-sm text-gray-500 font-medium">
+              <%= t.present.name %>
             </span>
             <% unless t.item_type == "ActionText::RichText" %>
               <%= form_for "x", url: "/revert/#{t.item_type}/#{t.item_id}" do |f| %>
