--- a/app/views/shared/_trail.html.erb
+++ b/app/views/shared/_trail.html.erb
@@ -2,63 +2,25 @@
   <%= link_to trail_path do %>
     <h2 class="text-hamers-red-400 text-xl font-bold m-4">Wat is er gebeurd?</h2>
   <% end %>
+
   <div class="flex items-center">
     <ul class="divide-y divide-gray-200 w-full">
       <% @trail.each do |t| %>
         <li class="py-2 px-4 w-full">
           <div class="flex space-x-3">
-            <% if t.whodunnit %>
-              <%= link_to User.find(t.whodunnit), class: "self-center" do %>
-                <% gravatar_for User.find(t.whodunnit), class: "h-6 w-6 rounded-full" %>
-              <% end %>
-            <% end %>
-            <% case t.item_type %>
-            <% when "Quote" %>
-              <div class="flex-1 space-y-1">
-                <div class="flex items-center justify-between">
-                  <% if t.item %>
-                    <span class="text-sm font-medium"><%= "citeerde #{t.item.user.name}" %></span>
+            <%= gravatar_for User.find_by_id(t.whodunnit) %>
+            <div class="flex-1 space-y-1">
+              <div class="flex items-center justify-between">
+                <span class="text-sm font-medium">
+                  <% if t.present.link %>
+                    <%= link_to t.present.message, t.present.link %>
                   <% else %>
-                    <span class="text-sm font-medium"><%= "citeerde onjuist" %></span>
+                    <%= t.present.message %>
                   <% end %>
-                </div>
-                <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
+                </span>
               </div>
-            <% when "Blogitem" %>
-              <% if t.event == "destroy" %>
-                <div class="flex-1 space-y-1">
-                  <div class="flex items-center justify-between">
-                    <span class="text-sm font-medium"><%= "verwijderde #{t.object["title"]}" %></span>
-                  </div>
-                  <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
-                </div>
-              <% else %>
-                <div class="flex-1 space-y-1">
-                  <div class="flex items-center justify-between">
-                    <span class="text-sm font-medium"><%= link_to "schreef aan #{t.item.title}", t.item %></span>
-                  </div>
-                  <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
-                </div>
-              <% end %>
-            <% when "Signup" %>
-              <div class="flex-1 space-y-1">
-                <div class="flex items-center justify-between">
-                  <% if t.object %>
-                    <span class="text-sm font-medium"><%= link_to "heeft zich #{t.object["status"] ? "ingeschreven" : "uitgeschreven"} voor #{t.item.event.title}", t.item %></span>
-                  <% else %>
-                    <span class="text-sm font-medium"><%= link_to "heeft zich #{t.item.status ? "ingeschreven" : "uitgeschreven"} voor #{t.item.event.title}", t.item %></span>
-                  <% end %>
-                </div>
-                <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
-              </div>
-            <% else %>
-              <div class="flex-1 space-y-1">
-                <div class="flex items-center justify-between">
-                  <span class="text-sm font-medium"><%= link_to "#{t.event}d #{t.item_type}", t.item %></span>
-                </div>
-                <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
-              </div>
-            <% end %>
+              <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
+            </div>
           </div>
         </li>
       <% end %>
