Make alerts a turbo stream and do not redirect away on errors

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,8 @@
 
       <%= render "layouts/footer" %>
     </div>
-    <%= render 'layouts/alert' %>
+    <%= turbo_frame_tag "flash" do %>
+      <%= render 'layouts/alert' %>
+    <% end %>
   </body>
 </html>
