--- a/app/views/layouts/_alert.html.erb
+++ b/app/views/layouts/_alert.html.erb
@@ -24,7 +24,7 @@
             </div>
             <div class="ml-3 w-0 flex-1 pt-0.5">
               <p class="text-sm font-medium text-gray-900">
-                <%= value %>
+                <%== value %>
               </p>
             </div>
             <div class="ml-4 flex-shrink-0 flex">
