--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,15 +2,15 @@
   Leden
 <% end %>
 
-<div data-controller="tabs" data-tabs-active-tab="border-hamers-red-500 text-hamers-red-600 hover:border-hamers-red-600 hover:text-hamers-red-700">
+<div data-controller="tabs select-tabs" data-tabs-active-tab="border-hamers-red-500 text-hamers-red-600 hover:border-hamers-red-600 hover:text-hamers-red-700">
   <div>
     <div class="sm:hidden">
       <label for="tabs" class="sr-only">Select a tab</label>
-      <select id="tabs" name="tabs" class="block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm rounded-md">
-        <option data-action="click->tabs#change" data-index="0">Leden</option>
-        <option data-action="click->tabs#change" data-index="1">Aspirant-leden</option>
-        <option data-action="click->tabs#change" data-index="2">Oud-leden</option>
-        <option data-action="click->tabs#change" data-index="3">Overige accounts</option>
+      <select id="tabs" data-action="change->select-tabs#change" data-select-tabs-target="tab" name="tabs" class="block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm rounded-md">
+        <option value="0">Leden</option>
+        <option value="1">Aspirant-leden</option>
+        <option value="2">Oud-leden</option>
+        <option value="3">Overige accounts</option>
       </select>
     </div>
 
@@ -34,10 +34,10 @@
     </div>
   </div>
 
-  <div class="hidden" data-tabs-target="panel">
+  <div class="hidden" data-tabs-target="panel" data-select-tabs-target="panel">
     <%= render "users/table", users: @leden, ratio: true %>
   </div>
-  <div class="hidden" data-tabs-target="panel">
+  <div class="hidden" data-tabs-target="panel" data-select-tabs-target="panel">
     <%= render "users/table", users: @aspiranten %>
 
     <% if current_user&.admin? %>
@@ -46,10 +46,10 @@
       <% end %>
     <% end %>
   </div>
-  <div class="hidden" data-tabs-target="panel">
+  <div class="hidden" data-tabs-target="panel" data-select-tabs-target="panel">
     <%= render "users/table", users: @oudelullen %>
   </div>
-  <div class="hidden" data-tabs-target="panel">
+  <div class="hidden" data-tabs-target="panel" data-select-tabs-target="panel">
     <%= render "users/table", users: @extern %>
   </div>
 </div>
