Drop old agenda column

--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -31,7 +31,7 @@
       <dl class="sm:divide-y sm:divide-gray-200">
         <div class="m-4">
           <h4>Agenda <%= @meeting.onderwerp %></h4>
-          <%= @meeting.agenda_rt %>
+          <%= @meeting.agenda %>
         </div>
 
         <% if @meeting.chairman %>
