Rich text editor for meetings

--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <%= f.label :agenda, class: label_classes %>
-  <%= f.text_area :agenda, class: input_classes %>
+  <%= f.rich_text_area :agenda, class: input_classes %>
 
   <%= f.label :onderwerp, class: label_classes %>
   <%= f.text_field :onderwerp, class: input_classes %>
