--- a/app/views/static_pages/trail.html.erb
+++ b/app/views/static_pages/trail.html.erb
@@ -37,7 +37,7 @@
           <div class="py-2 sm:grid sm:grid-cols-3 sm:gap-4">
             <dt class="text-gray-600"><%= name %></dt>
             <dd class="mt-1 text-gray-900 sm:mt-0 sm:col-span-2">
-              <%== diffy.to_s(:html_simple) %>
+              <%== diffy %>
             </dd>
           </div>
         <% end %>
