--- a/app/views/stickers/personal.html.erb
+++ b/app/views/stickers/personal.html.erb
@@ -37,13 +37,7 @@
               <%= "#{m.lat}, #{m.lon}" %>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-              <% jdata = Net::HTTP.get_response(URI.parse("https://maps.googleapis.com/maps/api/geocode/json?latlng=#{m.lat},#{m.lon}&key=AIzaSyAz0ENeS5X1Vh9A_-KxxENHBf-qQYB2z-U")) %>
-              <% mdata = JSON.parse(jdata.body) %>
-              <% if mdata["results"] && mdata["results"][0] && mdata["results"][0]["formatted_address"] %>
-                <%= mdata["results"][0]["formatted_address"] %>
-              <% else %>
-                Adres niet beschikbaar. Waarschijnlijk zijn de coordinaten misvormd.
-              <% end %>
+              <%= m.adres %>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
               <%= link_to "Wijzig", edit_sticker_path(m), class: button_classes %>
